# nlopt11

./: CHANGELOG.rst  CMakeLists.txt  CMakeListsNoROS.txt  CMakeListsROS.txt  README.md  package.xml
.github/workflows/: build-and-test.yml
example/: matlab_qp2.cpp  matlab_qp400.cpp  matlab_rosenbrock.cpp  nlopt_tutorial.cpp  octave_qp5.cpp  umetani_book_3_9a.cpp  umetani_book_3_9b.cpp  umetani_book_qp2.cpp  version_and_algorithms.cpp
include/: nlopt11.hpp  nlopt11x.hpp
test/: unit_tests_from_matlab.cpp  unit_tests_from_nlopt.cpp  unit_tests_from_octave.cpp  unit_tests_from_umetani_book.cpp
